...
    </io.fotoapparat.view.CameraView>

    <xyz.siddharthseth.panettone.CustomZoomView
        android:id="@+id/zoomView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/relativeLayout" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
...

        <ImageButton
            android:id="@+id/flashToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_toStartOf="@+id/shutter"
            android:background="@drawable/camera_secondary_button"
            android:contentDescription="@string/camera_shutter"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
...
